5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1577_994.log
== TEST (2019-03-14 18:49:19) 
-- CODE:
a=5
b=7
print(Universidade Federal do Amazonas
	  )
-- ERROR:
File "XXXX", line 3
    print(Universidade Federal do Amazonas
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:49:32) 
-- CODE:
a=5
b=7
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 3
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:53:02) 
-- CODE:
print(Universidade Federal do Amazonas)

-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:53:47) 
-- CODE:
print(Universidade Federal do Amazonas)
-- EXECUTION TIME:
0.186597
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:54:17) 
-- CODE:
print(Universidade Federal do Amazonas)
Universidade Federal do Amazonas
-- EXECUTION TIME:
0.199838
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:54:21) 
-- CODE:
print(Universidade Federal do Amazonas)
Universidade Federal do Amazonas
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:02:32) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:37) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.200373
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
